--- a/.github/workflows/lacework_tf_scan.yml
+++ b/.github/workflows/lacework_tf_scan.yml
@@ -37,7 +37,7 @@ jobs:
              echo "WORKSPACE=src" >> env.list
              # if we want to fail the step for any critical failed findings (violations) in the assessment scan
              ## echo "EXIT_FLAG='critical=2'" >> env.list  
-             echo "EXIT_FLAG=critical=1" >> env.list
+             echo "EXIT_FLAG=high=4" >> env.list
              docker run --env-file env.list -v "$(pwd):/app/src" lacework/codesec-iac:latest
 
         env:
