--- a/.github/workflows/code-analysis-pr.yml
+++ b/.github/workflows/code-analysis-pr.yml
@@ -19,7 +19,7 @@ permissions:
   pull-requests: write
 
 env:
-  LW_ACCOUNT_NAME: ${{ secrets._LW_ACCOUNT_NAME }}
+  LW_ACCOUNT_NAME: ${{ secrets.LW_ACCOUNT_NAME }}
   LW_API_KEY: ${{ secrets.LW_API_KEY }}
   LW_API_SECRET: ${{ secrets.LW_API_SECRET }}
   LW_SUBACCOUNT: ${{ secrets.LW_SUBACCOUNT }}
