--- a/.github/workflows/lacework-code-security-pr.yml
+++ b/.github/workflows/lacework-code-security-pr.yml
@@ -1,18 +1,5 @@
 on:
-
- # Triggers the workflow on push or pull request events but only for the "main" branch
-
- push:
-
-   branches: [ "main" ]
-
- pull_request:
-
-   branches: [ "main" ]
-
- # Allows you to run this workflow manually from the Actions tab
-
- workflow_dispatch:
+  - pull_request
 
 permissions:
   contents: read
@@ -20,14 +7,14 @@ permissions:
 
 env:
   LW_ACCOUNT_NAME: ${{ secrets.LW_ACCOUNT_NAME }}
+  LW_SUBACCOUNT_NAME: ${{ secrets.LW_SUBACCOUNT_NAME }}
   LW_API_KEY: ${{ secrets.LW_API_KEY }}
   LW_API_SECRET: ${{ secrets.LW_API_SECRET }}
-  LW_SUBACCOUNT: ${{ secrets.LW_SUBACCOUNT }}
 
-name: Lacework Code Analysis (PR)
+name: Lacework Code Security (PR)
 jobs:
   run-analysis:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     name: Run analysis
     strategy:
       matrix:
@@ -44,9 +31,8 @@ jobs:
         uses: lacework/code-security-action@v1
         with:
           target: ${{ matrix.target }}
-          tools: sca 
   display-results:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     name: Display results
     needs:
       - run-analysis
