--- a/.github/workflows/lacework-code-security-pr.yml
+++ b/.github/workflows/lacework-code-security-pr.yml
@@ -13,6 +13,7 @@ env:
 permissions:
   contents: read
   pull-requests: write
+  issues: write
 
 jobs:
   run-analysis:
@@ -22,11 +23,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.pull_request.head.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Analyze
         uses: lacework/code-security-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
         with:
           target: pullRequest
         continue-on-error: false
