--- a/.github/workflows/lacework-code-security-pr.yml
+++ b/.github/workflows/lacework-code-security-pr.yml
@@ -13,6 +13,7 @@ env:
 permissions:
   contents: read
   pull-requests: write
+  issues: write
 
 jobs:
   run-analysis:
@@ -22,11 +23,117 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.pull_request.head.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Verify config file
+        run: |
+          echo "Checking for config file..."
+          ls -la .lacework/ || echo "No .lacework directory found"
+          cat .lacework/config.yaml || echo "Config file not found"
+          echo "PR Number: ${{ github.event.pull_request.number }}"
+          echo "PR Head SHA: ${{ github.event.pull_request.head.sha }}"
       - name: Analyze
         uses: lacework/code-security-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
         with:
           target: pullRequest
         continue-on-error: false
+        id: lacework-scan
+      
+      - name: Post PR comments from scan results
+        if: always() && steps.lacework-scan.outcome != 'skipped'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require('fs');
+            const path = require('path');
+            
+            // Try to find SARIF or JSON output files
+            const possiblePaths = [
+              'scaReport/output-lw.json',
+              'scaReport/output.sarif',
+              'sca.sarif',
+              '.lacework/results/lacework-code-security-results.sarif'
+            ];
+            
+            let scanResults = null;
+            let foundFile = null;
+            
+            for (const filePath of possiblePaths) {
+              if (fs.existsSync(filePath)) {
+                try {
+                  const content = fs.readFileSync(filePath, 'utf8');
+                  if (filePath.endsWith('.json')) {
+                    scanResults = JSON.parse(content);
+                    foundFile = filePath;
+                    console.log(`Found JSON results file: ${filePath}`);
+                    break;
+                  }
+                } catch (e) {
+                  console.log(`Error reading ${filePath}: ${e.message}`);
+                }
+              }
+            }
+            
+            // Build comment from scan results
+            let commentBody = '## 🔒 Lacework Security Scan Results\n\n';
+            
+            if (scanResults) {
+              // Handle different JSON structures
+              const secrets = scanResults.secrets || scanResults.findings?.secrets || [];
+              const vulnerabilities = scanResults.vulnerabilities || scanResults.findings?.vulnerabilities || [];
+              
+              if (secrets.length > 0) {
+                commentBody += `### ⚠️ Secrets Detected (${secrets.length})\n\n`;
+                secrets.slice(0, 10).forEach((secret, idx) => {
+                  const file = secret.file || secret.filePath || 'Unknown';
+                  const line = secret.line || secret.lineNumber || 'N/A';
+                  const severity = secret.severity || 'Critical';
+                  const type = secret.type || secret.secretType || 'Unknown';
+                  commentBody += `${idx + 1}. **${severity}** - \`${file}:${line}\`\n`;
+                  commentBody += `   - Type: ${type}\n`;
+                });
+                if (secrets.length > 10) {
+                  commentBody += `\n*... and ${secrets.length - 10} more secrets*\n`;
+                }
+              }
+              
+              if (vulnerabilities.length > 0) {
+                commentBody += `\n### 🛡️ Vulnerabilities Found (${vulnerabilities.length})\n\n`;
+                vulnerabilities.slice(0, 10).forEach((vuln, idx) => {
+                  const pkg = vuln.package || vuln.packageName || 'Unknown';
+                  const severity = vuln.severity || 'High';
+                  commentBody += `${idx + 1}. **${severity}** - ${pkg}\n`;
+                });
+                if (vulnerabilities.length > 10) {
+                  commentBody += `\n*... and ${vulnerabilities.length - 10} more vulnerabilities*\n`;
+                }
+              }
+            } else {
+              // Fallback: check if we can read from artifacts or logs
+              commentBody += '⚠️ Scan completed but results file format not recognized.\n';
+              commentBody += 'Check the workflow logs for detailed scan results.\n';
+            }
+            
+            if (commentBody === '## 🔒 Lacework Security Scan Results\n\n') {
+              commentBody += '✅ No security issues detected in this scan.\n';
+            }
+            
+            // Post comment to PR
+            const prNumber = context.payload.pull_request?.number || context.issue?.number;
+            if (!prNumber) {
+              console.log('Could not determine PR number');
+              return;
+            }
+            
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: prNumber,
+              body: commentBody
+            });
+            
+            console.log('Comment posted to PR');
