--- a/.github/workflows/lacework-code-security-pr.yml
+++ b/.github/workflows/lacework-code-security-pr.yml
@@ -1,8 +1,8 @@
 name: Lacework Code Security (Pull Request)
 
-on:
-  pull_request:
-    branches:
+on: 
+  pull_request: 
+    branches: 
       - main
 
 env:
@@ -15,18 +15,18 @@ permissions:
   pull-requests: write
   issues: write
 
-jobs:
+jobs: 
   run-analysis:
     runs-on: ubuntu-latest
     name: Run analysis
-    steps:
+    steps: 
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Verify config file
-        run: |
+        run: | 
           echo "Checking for config file..."
           ls -la .lacework/ || echo "No .lacework directory found"
           cat .lacework/config.yaml || echo "Config file not found"
@@ -34,18 +34,16 @@ jobs:
           echo "PR Head SHA: ${{ github.event.pull_request.head.sha }}"
       - name: Analyze
         uses: lacework/code-security-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
         with:
-          target: pullRequest
+          target: new
+          token: ${{ secrets.GITHUB_TOKEN }}
         continue-on-error: false
         id: lacework-scan
       
       - name: Post PR comments from scan results
         if: always() && steps.lacework-scan.outcome != 'skipped'
         uses: actions/github-script@v7
-        with:
+        with: 
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
