Fix YAML structure: move display-results job to correct level

--- a/.github/workflows/lacework-code-security-push.yml
+++ b/.github/workflows/lacework-code-security-push.yml
@@ -25,3 +25,14 @@ jobs:
         uses: lacework/code-security-action@v1
         with:
           target: push
+  display-results:
+    runs-on: ubuntu-latest
+    name: Display results
+    needs:
+      - run-analysis
+    steps:
+      - name: Results
+        id: code-analysis
+        uses: lacework/code-security-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}  
