--- a/.github/workflows/lacework-code-security-complete.yml
+++ b/.github/workflows/lacework-code-security-complete.yml
@@ -1,97 +1,54 @@
-name: Lacework Code Security - IAC & SAST Scan
-
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+  - pull_request
 
 permissions:
   contents: read
   pull-requests: write
-  issues: write
-  security-events: write
 
 env:
   LW_ACCOUNT_NAME: ${{ secrets.LW_ACCOUNT_NAME }}
   LW_API_KEY: ${{ secrets.LW_API_KEY }}
   LW_API_SECRET: ${{ secrets.LW_API_SECRET }}
 
+name: Lacework Code Security (PR)
 jobs:
-  code-security-scan:
+  run-analysis:
     runs-on: ubuntu-latest
-    name: Lacework Code Security Analysis
-    
+    name: Run analysis
+    strategy:
+      matrix:
+        target: [new, old]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0  # Full history for better analysis
-
-      - name: Run Lacework Code Security Scan
-        id: lacework-scan
+          fetch-depth: 2
+      - name: Checkout old
+        if: ${{ matrix.target == 'old' }}
+        run: git checkout HEAD^1
+      - name: Analyze
         uses: lacework/code-security-action@v1
         with:
-          target: ${{ github.event_name == 'pull_request' && 'new' || 'push' }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-        continue-on-error: true  # Continue even if issues are found
-
-      - name: Upload scan results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: lacework-scan-results
-          path: |
-            scaReport/
-            .lacework/
-            *.sarif
-          retention-days: 7
-
-      - name: Display scan summary
-        if: always()
-        run: |
-          echo "## Lacework Code Security Scan Results" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Scan Type:** IAC + SAST (SCA)" >> $GITHUB_STEP_SUMMARY
-          echo "**Target:** ${{ github.event_name == 'pull_request' && 'new' || 'push' }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          
-          if [ -f "scaReport/output-lw.json" ]; then
-            echo "✅ Scan results generated" >> $GITHUB_STEP_SUMMARY
-            echo "📊 Results sent to Lacework console" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "⚠️ Scan results file not found" >> $GITHUB_STEP_SUMMARY
-          fi
-          
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "View detailed results in the [Lacework console](https://${{ secrets.LW_ACCOUNT_NAME }}.lacework.net)" >> $GITHUB_STEP_SUMMARY
-
+          target: ${{ matrix.target }}
   display-results:
     runs-on: ubuntu-latest
-    name: Display Results and Post Comments
+    name: Display results
     needs:
-      - code-security-scan
-    if: always() && github.event_name == 'pull_request'
+      - run-analysis
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Download scan results
-        uses: actions/download-artifact@v4
-        with:
-          name: lacework-scan-results
-          path: .
-
-      - name: Display Results and Post PR Comments
+      - name: Results
         id: code-analysis
         uses: lacework/code-security-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
+  push-results:
+    runs-on: ubuntu-latest
+    name: Run analysis
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Analyze
+        uses: lacework/code-security-action@v1
+        with:
+          target: push          
